--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -10,6 +10,6 @@
 
 
 
-    <dbz-add-character></dbz-add-character>
+    <dbz-add-character (onNewCharacter)="onNewCharacter($event)"></dbz-add-character>
   </div>
 </div>
