--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,29 +1,22 @@
 <h4 class="text-center">Listado</h4>
-    <ul class="list-group">
-      <li
-        *ngFor="
-        let character of characterList;
-        let i = index;
-        let isFirts = first;
-        let isLast = last;
-        let isEven = even;
-        let isOdd = odd;
-        "
-        class="list-group-item d-flex justify-content-between align-items-center"
-        [ngClass]="{'list-group-item-primary': isEven, 'list-group-item-dark': isLast}
-        ">
-      <div>
-        <span class="text-primary">{{i}}. </span>
-
-        <span>{{character.name}} - </span>
-
-        <strong>Power: </strong>
-
-        <span>{{character.power}}</span>
-
-      </div>
-      <button class="btn btn-danger">X</button>
-
-      </li>
-
-    </ul>
+<ul class="list-group">
+  <li
+    *ngFor="
+    let character of characterList;
+    let i = index;
+    let isFirst = first;
+    let isLast = last;
+    let isEven = even;
+    let isOdd = odd;
+    "
+    class="list-group-item d-flex justify-content-between align-items-center"
+    [ngClass]="{'list-group-item-primary': isEven, 'list-group-item-dark': isLast}">
+    <div>
+      <span class="text-primary">{{i}}. </span>
+      <span>{{character.name}} - </span>
+      <strong>Power: </strong>
+      <span>{{character.power}}</span>
+    </div>
+    <button (click)="onDeleteCharacter(character.id)" class="btn btn-danger">X</button>
+  </li>
+</ul>
